--- a/app/views/characters/_list_section.haml
+++ b/app/views/characters/_list_section.haml
@@ -1,4 +1,5 @@
 - col_count = 6
+- col_count -= 1 if local_assigns[:hide_buttons]
 - col_count += 1 if local_assigns[:show_template]
 - col_count += 1 if local_assigns[:show_user] && local_assigns[:show_settings]
 
@@ -52,7 +53,8 @@
     - if local_assigns[:show_user]
       %td.padding-5{class: klass}
         %b User
-    %td.padding-5{class: klass}
+    - unless local_assigns[:hide_buttons]
+      %td.padding-5{class: klass}
   - characters.ordered.each do |character|
     - klass = cycle('even', 'odd')
     %tr
@@ -71,9 +73,8 @@
       - if local_assigns[:show_user]
         %td.padding-5{class: klass, style: 'width:10%'}
           = user_link(character.user)
-
-      %td.width-70.right-align{class: klass}
-        - unless local_assigns[:hide_buttons]
+      - unless local_assigns[:hide_buttons]
+        %td.width-70.right-align{class: klass}
           - if character.editable_by?(current_user)
             = link_to edit_character_path(character) do
               = image_tag "icons/pencil.png"
